# bittensor-auth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  demo.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: browser-demo.html  client.py  demo.tape  demo_server.py  observability.py  rate_limit.py  server.py
src/bittensor_auth/: __init__.py  cache.py  client.py  config.py  core.py  errors.py  metagraph.py  nonce.py  session.py  signing.py
src/bittensor_auth/fastapi/: __init__.py  _utils.py  dependencies.py  errors.py  router.py
tests/: conftest.py  test_cache.py  test_client.py  test_config.py  test_core.py  test_errors.py  test_metagraph.py  test_nonce.py  test_readme_quickstart.py  test_session.py  test_signing.py
tests/test_fastapi/: conftest.py  test_dependencies.py  test_router.py
